--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 				</div>
 				<div class="mt-5">
 					<div class="email-links">
-						<a href="mailto:contact@yoursite.com"
+						<a href="mailto:npwebdeveloper01@gmail.com"
 							class="py-3 my-3 border-bottom d-flex">npwebdeveloper01@gmail.com</a>
 					</div>
 				</div>
@@ -538,6 +538,7 @@
                     <div class="contact-form py-4">
                       <form id="myy-form" class="form-group" action="https://formspree.io/f/xzblvzez"
                       method="POST"  onsubmit="return validateForm()">
+                      <!--https://formspree.io/-->
                         <div class="pb-2">
                           <input type="text" id="name" name="name" placeholder="Your Full Name"
                             class="form-control" required>
